Submission for final review.

--- a/Traversing JSONs.ipynb
+++ b/Traversing JSONs.ipynb
@@ -67,12 +67,12 @@
     {
      "data": {
       "text/plain": [
-       "{'temp': 282.48,\n",
-       " 'feels_like': 282.48,\n",
-       " 'temp_min': 282.04,\n",
-       " 'temp_max': 283.15,\n",
-       " 'pressure': 1005,\n",
-       " 'humidity': 73}"
+       "{'temp': 278.62,\n",
+       " 'feels_like': 278.62,\n",
+       " 'temp_min': 277.04,\n",
+       " 'temp_max': 280.93,\n",
+       " 'pressure': 1016,\n",
+       " 'humidity': 75}"
       ]
      },
      "execution_count": 6,
@@ -121,21 +121,21 @@
        "   'description': 'overcast clouds',\n",
        "   'icon': '04d'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 282.48,\n",
-       "  'feels_like': 282.48,\n",
-       "  'temp_min': 282.04,\n",
-       "  'temp_max': 283.15,\n",
-       "  'pressure': 1005,\n",
-       "  'humidity': 73},\n",
+       " 'main': {'temp': 278.62,\n",
+       "  'feels_like': 278.62,\n",
+       "  'temp_min': 277.04,\n",
+       "  'temp_max': 280.93,\n",
+       "  'pressure': 1016,\n",
+       "  'humidity': 75},\n",
        " 'visibility': 10000,\n",
-       " 'wind': {'speed': 0.89, 'deg': 104, 'gust': 2.24},\n",
-       " 'clouds': {'all': 99},\n",
-       " 'dt': 1619596559,\n",
-       " 'sys': {'type': 3,\n",
-       "  'id': 2006068,\n",
+       " 'wind': {'speed': 1.03, 'deg': 0},\n",
+       " 'clouds': {'all': 88},\n",
+       " 'dt': 1619764492,\n",
+       " 'sys': {'type': 1,\n",
+       "  'id': 1414,\n",
        "  'country': 'GB',\n",
-       "  'sunrise': 1619584662,\n",
-       "  'sunset': 1619637480},\n",
+       "  'sunrise': 1619757233,\n",
+       "  'sunset': 1619810479},\n",
        " 'timezone': 3600,\n",
        " 'id': 2643743,\n",
        " 'name': 'London',\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "'overcast clouds'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
        "('GB',)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,6 +192,53 @@
     "city_country = weather_json[\"sys\"][\"country\"],\n",
     "city_country"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(weather_json)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "45"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(\"https://api.spacexdata.com/v2/launchpads.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
