--- a/Vacation_Itinerary/Vacation_Itinerary.ipynb
+++ b/Vacation_Itinerary/Vacation_Itinerary.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -66,80 +66,80 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Cabo San Lucas</td>\n",
-       "      <td>MX</td>\n",
-       "      <td>75.99</td>\n",
-       "      <td>clear sky</td>\n",
-       "      <td>22.8909</td>\n",
-       "      <td>-109.9124</td>\n",
-       "      <td>Hotel Tesoro Los Cabos</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Vaini</td>\n",
+       "      <td>TO</td>\n",
+       "      <td>73.40</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>-21.2000</td>\n",
+       "      <td>-175.2000</td>\n",
+       "      <td>Keleti Beach Resort</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Tikaitnagar</td>\n",
-       "      <td>IN</td>\n",
-       "      <td>94.01</td>\n",
-       "      <td>few clouds</td>\n",
-       "      <td>26.9500</td>\n",
-       "      <td>81.5833</td>\n",
-       "      <td>Suraj Verma S/O Om Prakash Verma</td>\n",
+       "      <td>29</td>\n",
+       "      <td>Moron</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>73.99</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>-34.6534</td>\n",
+       "      <td>-58.6198</td>\n",
+       "      <td>Hotel Morón</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>10</td>\n",
-       "      <td>Avarua</td>\n",
-       "      <td>CK</td>\n",
-       "      <td>80.60</td>\n",
-       "      <td>few clouds</td>\n",
-       "      <td>-21.2078</td>\n",
-       "      <td>-159.7750</td>\n",
-       "      <td>Paradise Inn</td>\n",
+       "      <td>74</td>\n",
+       "      <td>Nishihara</td>\n",
+       "      <td>JP</td>\n",
+       "      <td>73.40</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "      <td>26.1842</td>\n",
+       "      <td>127.7558</td>\n",
+       "      <td>Minshuku Agaihama</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>12</td>\n",
-       "      <td>Kieta</td>\n",
-       "      <td>PG</td>\n",
-       "      <td>78.49</td>\n",
-       "      <td>overcast clouds</td>\n",
-       "      <td>-6.2167</td>\n",
-       "      <td>155.6333</td>\n",
-       "      <td>Uruna Bay Retreat</td>\n",
+       "      <td>96</td>\n",
+       "      <td>Sao Filipe</td>\n",
+       "      <td>CV</td>\n",
+       "      <td>72.84</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>14.8961</td>\n",
+       "      <td>-24.4956</td>\n",
+       "      <td>Tortuga B&amp;B</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>15</td>\n",
-       "      <td>Belmonte</td>\n",
-       "      <td>BR</td>\n",
-       "      <td>82.40</td>\n",
-       "      <td>scattered clouds</td>\n",
-       "      <td>-15.8631</td>\n",
-       "      <td>-38.8828</td>\n",
-       "      <td>Pousada Monte Carmelo O Pão</td>\n",
+       "      <td>118</td>\n",
+       "      <td>Popondetta</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>72.77</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>-8.7537</td>\n",
+       "      <td>148.2534</td>\n",
+       "      <td>Timos Transit House</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   City_ID            City Country  Max Temp Current Description      Lat  \\\n",
-       "0        4  Cabo San Lucas      MX     75.99           clear sky  22.8909   \n",
-       "1        5     Tikaitnagar      IN     94.01          few clouds  26.9500   \n",
-       "2       10          Avarua      CK     80.60          few clouds -21.2078   \n",
-       "3       12           Kieta      PG     78.49     overcast clouds  -6.2167   \n",
-       "4       15        Belmonte      BR     82.40    scattered clouds -15.8631   \n",
+       "   City_ID        City Country  Max Temp Current Description      Lat  \\\n",
+       "0        1       Vaini      TO     73.40       broken clouds -21.2000   \n",
+       "1       29       Moron      AR     73.99           clear sky -34.6534   \n",
+       "2       74   Nishihara      JP     73.40    scattered clouds  26.1842   \n",
+       "3       96  Sao Filipe      CV     72.84           clear sky  14.8961   \n",
+       "4      118  Popondetta      PG     72.77     overcast clouds  -8.7537   \n",
        "\n",
-       "        Lng                        Hotel Name  \n",
-       "0 -109.9124            Hotel Tesoro Los Cabos  \n",
-       "1   81.5833  Suraj Verma S/O Om Prakash Verma  \n",
-       "2 -159.7750                      Paradise Inn  \n",
-       "3  155.6333                 Uruna Bay Retreat  \n",
-       "4  -38.8828       Pousada Monte Carmelo O Pão  "
+       "        Lng           Hotel Name  \n",
+       "0 -175.2000  Keleti Beach Resort  \n",
+       "1  -58.6198          Hotel Morón  \n",
+       "2  127.7558    Minshuku Agaihama  \n",
+       "3  -24.4956          Tortuga B&B  \n",
+       "4  148.2534  Timos Transit House  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,13 +175,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3dfdf5838b584a66807dd62161c42acf",
+       "model_id": "e4ee829297a44dd1ae4ba1f6531017df",
        "version_major": 2,
        "version_minor": 0
       },
@@ -195,9 +195,8 @@
    ],
    "source": [
     "# 4a. Add a marker layer for each city to the map.\n",
-    "locations = vacation_df[[\"Lat\", \"Lng\"]]\n",
-    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
     "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
+    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
     "\n",
     "fig.add_layer(marker_layer)\n",
     "\n",
@@ -207,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,24 +214,24 @@
     "# 5. Create DataFrames for each city by filtering the 'vacation_df' using the loc method. \n",
     "# Hint: The starting and ending city should be the same city.\n",
     "\n",
-    "vacation_start = vacation_df.loc[vacation_df[\"City\"] == \"Taxco\"]\n",
-    "vacation_end = vacation_df.loc[vacation_df[\"City\"] == \"Taxco\"]\n",
-    "vacation_stop1 = vacation_df.loc[vacation_df[\"City\"] == \"Acapulco\"]\n",
-    "vacation_stop2 = vacation_df.loc[vacation_df[\"City\"] == \"Bucerias\"] \n",
-    "vacation_stop3 = vacation_df.loc[vacation_df[\"City\"] == \"Concepcion Del Oro\"] "
+    "vacation_start = vacation_df.loc[vacation_df[\"City\"] == \"Moron\"]\n",
+    "vacation_end = vacation_df.loc[vacation_df[\"City\"] == \"Moron\"]\n",
+    "vacation_stop1 = vacation_df.loc[vacation_df[\"City\"] == \"Mercedes\"]\n",
+    "vacation_stop2 = vacation_df.loc[vacation_df[\"City\"] == \"Chivilcoy\"] \n",
+    "vacation_stop3 = vacation_df.loc[vacation_df[\"City\"] == \"Pergamino\"] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start: (18.55, -99.6), End: (18.55, -99.6)\n",
-      "Stop 1: (16.8634, -99.8901), Stop 2: (20.75, -105.3333), Stop 3: (24.6333, -101.4167)\n"
+      "Start: (-34.6534, -58.6198), End: (-34.6534, -58.6198)\n",
+      "Stop 1: (-34.6515, -59.4307), Stop 2: (-34.8957, -60.0167), Stop 3: (-33.89, -60.5736)\n"
      ]
     }
    ],
@@ -250,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -258,7 +257,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb08145765a940db82e2ce1c3934c694",
+       "model_id": "d011c93430c844b99676b764f4a030ad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -284,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -321,67 +320,67 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>605</td>\n",
-       "      <td>Taxco</td>\n",
-       "      <td>MX</td>\n",
-       "      <td>89.01</td>\n",
+       "      <td>29</td>\n",
+       "      <td>Moron</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>73.99</td>\n",
        "      <td>clear sky</td>\n",
-       "      <td>18.5500</td>\n",
-       "      <td>-99.6000</td>\n",
-       "      <td>Hotel Boutique Pueblo Lindo</td>\n",
+       "      <td>-34.6534</td>\n",
+       "      <td>-58.6198</td>\n",
+       "      <td>Hotel Morón</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>452</td>\n",
-       "      <td>Acapulco</td>\n",
-       "      <td>MX</td>\n",
-       "      <td>84.20</td>\n",
-       "      <td>few clouds</td>\n",
-       "      <td>16.8634</td>\n",
-       "      <td>-99.8901</td>\n",
-       "      <td>HS Hotsson Smart Acapulco</td>\n",
+       "      <td>267</td>\n",
+       "      <td>Mercedes</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>75.00</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>-34.6515</td>\n",
+       "      <td>-59.4307</td>\n",
+       "      <td>Posada del Inti Centro</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>499</td>\n",
-       "      <td>Bucerias</td>\n",
-       "      <td>MX</td>\n",
-       "      <td>78.80</td>\n",
-       "      <td>overcast clouds</td>\n",
-       "      <td>20.7500</td>\n",
-       "      <td>-105.3333</td>\n",
-       "      <td>Villa del Palmar Flamingos Beach Resort &amp; Spa ...</td>\n",
+       "      <td>628</td>\n",
+       "      <td>Chivilcoy</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>75.00</td>\n",
+       "      <td>few clouds</td>\n",
+       "      <td>-34.8957</td>\n",
+       "      <td>-60.0167</td>\n",
+       "      <td>Chivilrent</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>548</td>\n",
-       "      <td>Concepcion Del Oro</td>\n",
-       "      <td>MX</td>\n",
-       "      <td>79.20</td>\n",
+       "      <td>323</td>\n",
+       "      <td>Pergamino</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>75.00</td>\n",
        "      <td>clear sky</td>\n",
-       "      <td>24.6333</td>\n",
-       "      <td>-101.4167</td>\n",
-       "      <td>HOTEL HACIENDA SAN JAVIER</td>\n",
+       "      <td>-33.8900</td>\n",
+       "      <td>-60.5736</td>\n",
+       "      <td>Hotel Fachinat</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   City_ID                City Country  Max Temp Current Description      Lat  \\\n",
-       "0      605               Taxco      MX     89.01           clear sky  18.5500   \n",
-       "1      452            Acapulco      MX     84.20          few clouds  16.8634   \n",
-       "2      499            Bucerias      MX     78.80     overcast clouds  20.7500   \n",
-       "3      548  Concepcion Del Oro      MX     79.20           clear sky  24.6333   \n",
+       "   City_ID       City Country  Max Temp Current Description      Lat      Lng  \\\n",
+       "0       29      Moron      AR     73.99           clear sky -34.6534 -58.6198   \n",
+       "1      267   Mercedes      AR     75.00           clear sky -34.6515 -59.4307   \n",
+       "2      628  Chivilcoy      AR     75.00          few clouds -34.8957 -60.0167   \n",
+       "3      323  Pergamino      AR     75.00           clear sky -33.8900 -60.5736   \n",
        "\n",
-       "        Lng                                         Hotel Name  \n",
-       "0  -99.6000                        Hotel Boutique Pueblo Lindo  \n",
-       "1  -99.8901                          HS Hotsson Smart Acapulco  \n",
-       "2 -105.3333  Villa del Palmar Flamingos Beach Resort & Spa ...  \n",
-       "3 -101.4167                          HOTEL HACIENDA SAN JAVIER  "
+       "               Hotel Name  \n",
+       "0             Hotel Morón  \n",
+       "1  Posada del Inti Centro  \n",
+       "2              Chivilrent  \n",
+       "3          Hotel Fachinat  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,13 +417,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a947f70e294c41a2a1aecf8ced253463",
+       "model_id": "50ff2f84f79c4ec7a2a05eeeb0b2fbb9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -438,9 +437,8 @@
    ],
    "source": [
     "# 11a. Add a marker layer for each city to the map.\n",
-    "locations = itinerary_df[[\"Lat\", \"Lng\"]]\n",
-    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
     "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
+    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
     "\n",
     "fig.add_layer(marker_layer)\n",
     "\n",
